include_directories( ${CMAKE_SOURCE_DIR}/src 
    ${CMAKE_BINARY_DIR}/src
    ${SCICOSLAB_INCLUDE_DIRS}
    ${JSBSIM_INCLUDE_DIRS} 
    ${Boost_INCLUDE_DIRS}
    ${ARKCOMM_INCLUDE_DIRS}
    ${ARKMATH_INCLUDE_DIRS}
    ${ARKOSG_INCLUDE_DIRS}
    ${PLIB_INCLUDE_DIRS}
    ${OPENSCENEGRAPH_INCLUDE_DIRS}
    )

# scicoslab plugin
if(JSBSIM_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${JSBSIM_LIBRARIES})
endif()
if(ARKOSG_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${ARKOSG_LIBRARIES})
endif()
if(ARKCOMM_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${ARKCOMM_LIBRARIES})
endif()
if(ARKMATH_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${ARKMATH_LIBRARIES})
endif()
if(LAPACK_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${LAPACK_LIBRARIES})
endif()
if(OPENSCENEGRAPH_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${OPENSCENEGRAPH_LIBRARIES})
    list(APPEND ARKTOOLBOX_LIBRARIES ${OPENGL_LIBRARIES})
endif()
if(Boost_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${Boost_LIBRARIES})
endif()
if(PLIB_FOUND)
    list(APPEND ARKTOOLBOX_LIBRARIES ${PLIB_LIBRARIES})
endif()
if(MINGW)
    list(APPEND ARKTOOLBOX_LIBRARIES winmm wsock32)
endif()

set(ARKTOOLBOX_HDRS
    VisSailboat.hpp
    VisJet.hpp
    )
set(ARKTOOLBOX_SRCS
    VisSailboat.cpp
    VisJet.cpp
    )
add_library(arktoolbox MODULE ${ARKTOOLBOX_SRCS} ${ARKTOOLBOX_HDRS})
target_link_libraries(arktoolbox ${ARKTOOLBOX_LIBRARIES})
